modules/wycs/tests/valid/test_macro_01.wyal
define loop(int x) is:
       x >= 0

assert:
  forall (int x):
       loop(x) ==> loop(x+1)
