modules/wycs/tests/invalid/test_013.wyal
define loop(int x) as x >= 0

assert:
  forall (int x):
    loop(x) ==> loop(x-1)
